config-root/namespaces/jx-production/jx3-golang-http/jx3-golang-http-jx3-golang-http-deploy.yaml
# Source: jx3-golang-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-golang-http-jx3-golang-http
  labels:
    draft: draft-app
    chart: "jx3-golang-http-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-golang-http'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx3-golang-http-jx3-golang-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-golang-http-jx3-golang-http
    spec:
      serviceAccountName: jx3-golang-http-jx3-golang-http
      containers:
        - name: jx3-golang-http
          image: "ghcr.io/dockerpac/jx3-golang-http:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
