config-root/namespaces/jx-production/jx3-golang-http/jx3-golang-http-svc.yaml
# Source: jx3-golang-http/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx3-golang-http
  labels:
    chart: "jx3-golang-http-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-golang-http'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx3-golang-http-jx3-golang-http
